# claude_skills

./: .continue-here.md  .continuehere.md  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CORRECTIONS_APPLIED.md  DESIGN.md  DOCUMENTATION_DRIFT_AUDIT.md  DOCUMENTATION_DRIFT_AUDIT_FOLLOWUP_2.md  IMPLEMENTATION-SUMMARY.md  PRODUCT.md  PYTHON3_DEV_IMPORT_ASSESSMENT.md  QUICK-START-RESEARCH-INTEGRATION.md  README.md  RESEARCH-INTEGRATION.md  batch-process-research.sh  biome.json  install.py  package-lock.json  package.json  pnpm-lock.yaml  process-research-integration.py  pyproject.toml  revisit.md  skills-lock.json
plugins/development-harness/: .mcp.json  CLAUDE.md  README.md  dh_config.py  dh_paths.py  pyproject.toml
plugins/development-harness/.claude-plugin/: plugin.json
plugins/development-harness/.claude/sam/: P2406-gate-token-remote-execution-fix.yaml
plugins/development-harness/.cursor-plugin/: plugin.json
plugins/development-harness/agent_profile/: __init__.py  discovery.py  models.py  parser.py  resolver.py  server.py
plugins/development-harness/agents/: alignment-analyst.md  backlog-item-groomer.md  classifier.md  code-reviewer.md  codebase-analyzer.md  context-gathering.md  context-refinement.md  contract-verification.md  dh-context-gathering.md  doc-drift-auditor.md  ecosystem-researcher.md  fact-checker.md  feature-researcher.md  feature-verifier.md  generic-stage-agent.md  impact-analyst.md  integration-checker.md  plan-validator.md  reviewer-accessibility.md  reviewer-performance.md  reviewer-quality.md  reviewer-security.md  rtica-assessor.md  service-docs-maintainer.md  service-documentation.md  swarm-task-planner.md  t0-baseline-capture.md  task-worker.md  technical-researcher.md  tn-verification-gate.md
plugins/development-harness/backlog_core/: ARCHITECTURE.md  DOCUMENTATION_DRIFT_AUDIT.md  __init__.py  _branch_delegates.py  artifact_provider.py  artifact_provider_local.py  artifact_registry.py  backend_protocol.py  dispatch_state.py  entry_blocks.py  frontmatter_utils.py  gh_client.py  github.py  github_branches.py  github_sync.py  gitlab_client.py  jsonl_utils.py  linear_client.py  models.py  operations.py  parsing.py  rendering.py  server.py  transcript_reader.py  yaml_io.py
plugins/development-harness/backlog_core/backends/: __init__.py  (+7 more)
plugins/development-harness/dispatch_schema/: __init__.py  gates.py  paths.py
plugins/development-harness/docs/: TASK_FILE_FORMAT.md  adr-9-close-resolve-semantics.md  backend-providers.md  backlog-item-groomed-schema.md  backlog-item-lifecycle.md  backlog-lifecycle.draft.md  backlog-lifecycle.md  complexity-fit-adoption-conditions.md  complexity-fit-and-economics-of-agents.md  graphql-usage-guide.md  plan-artifact-lifecycle.md  plugin-deployment-model.md  poc-validation-guide.md  process-audit-backlog-lifecycle-2026-03-02.md  workflow-architecture-diagram.md  workflow-change-process.md
plugins/development-harness/hooks/: block-context-direct-writes.cjs  hooks.json  session-end-kage-bunshin-child-notify.cjs  session-end-kage-bunshin-cleanup.cjs  session-start-session-id.cjs  stop-kage-bunshin-child-notify.cjs  stop-kage-bunshin-idle-check.cjs  task-completed-kage-bunshin-reminder.cjs
plugins/development-harness/sam_schema/: __init__.py  cli.py  server.py  task_format.py
plugins/development-harness/scripts/: build_quality_gate_plan.py  close_test_issues.py  dh_mcp_preinit.py  dh_migrate.py  dispatch_helper.py  live_validation_step.py  manifest_discovery.py  manifest_merge.py  manifest_resolver.py  manifest_schema.py  migrate_artifacts.py  migrate_backlog_to_yaml.py  migrate_plan_artifacts.py  migrate_tasks_to_github.py  prepare_clean_worktree.sh  run_backlog_server.py  run_live_validation_skill.py  run_sam_server.py  team_health.py  verify_migration_fidelity.py
plugins/development-harness/templates/: language-manifest-template.md
plugins/development-harness/tests/: conftest.py  graphql_factories.py  helpers.py  test_ac_overlap_warning.py  test_artifact_content_storage.py  test_artifact_provider_fallback.py  test_artifact_provider_local.py  test_backend_status.py  test_backend_toml_search.py  test_backlog_core_github.py  test_backlog_core_models.py  test_backlog_core_operations.py  test_backlog_core_parsing.py  test_backlog_core_paths.py  test_backlog_core_server.py  test_backlog_display_dict_roundtrip.py  test_backlog_groom_sections.py  test_batch_section_writes.py  test_comment_operations.py  test_cross_backend.py  test_dh_config.py  test_dh_migrate.py  test_dh_paths.py  test_dh_paths_integration.py  test_dispatch_helper.py  test_dispatch_state.py  test_dispatch_tools.py  test_entry_blocks.py  test_entry_blocks_integration.py  test_epoch_timestamp_bug.py  test_feature_verifier_live_validation.py  test_frontmatter_utils.py  test_gates.py  test_github_branches.py  test_github_sync.py  test_github_tools_issues.py  test_github_tools_labels.py  test_github_tools_milestones.py  test_github_tools_projects.py  test_github_tools_prs.py  (+29 more)
plugins/development-harness/tests_backlog/: __init__.py  test_artifact_provider.py  test_artifact_registry.py  test_backlog_backend_capability_contract.py  test_backlog_update_artifact_registration.py  test_bd_runner.py  test_beads_artifact_provider.py  test_beads_backend.py  test_beads_models.py  test_create_backend_factory_beads.py  test_github_gist_artifact_provider.py  test_gitlab_artifact_provider.py  test_linear_artifact_provider.py  test_sections_index_consistency.py  test_task_status_hook_beads.py
plugins/development-harness/tests_sam/: __init__.py  conftest.py  test_addressing.py  test_addressing_pnnn.py  test_cli.py  test_cli_claim.py  test_cli_create.py  test_cli_migrate_all.py  test_cli_migrate_fallback.py  test_consolidated_tools.py  test_dependencies.py  test_drafting_state.py  test_large_document_write.py  test_models.py  test_query.py  test_reader_bugfixes.py  test_server.py  test_server_mcp.py  test_writers_new.py
(+3534 files in other folders)
