[project]
name = "claude_skills"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bandit[toml]>=1.8.6",
    "gitpython>=3.1.45",
    "pyright>=1.1.404",
    "ruff>=0.12.10",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "anthropic>=0.80.0",
    "basedpyright>=1.33.0",
    "claude-code-sdk>=0.0.25",
    "defusedxml>=0.7.1",
    "duckdb>=1.4.4",
    "fastmcp==3.0.0rc2",
    "generate-changelog>=0.16.0",
    "hatch-vcs>=0.5.0",
    "httpx>=0.28.1",
    "hypothesis>=6.0.0",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.0",
    "pm4py>=2.7.0",
    "prefixspan>=0.5.2",
    "prek>=0.2.19",
    "pydantic>=2.12.3",
    "pypfmt>=0.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.5.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "python-semantic-release>=10.4.1",
    "ruamel.yaml>=0.18.0",
    "scikit-learn>=1.0",
    "tiktoken>=0.12.0",
    "toml-sort>=0.24.3",
    "tomlkit>=0.13.0",
    "ty>=0.0.17",
    "typer>=0.21.0",
    "uv-sort>=0.7.0",
    "vadersentiment>=3.3.2",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=scripts",
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "-n",
    "auto",
]
markers = [
    "demos: marks tests as demonstration tests",
    "e2e: marks tests as end-to-end tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
]
pythonpath = [
    ".",
    "./.claude/skills/create-merge-request-changelog/scripts",
    "./.claude/skills/research-curator/scripts",
    "./plugins/development-harness/skills/implementation-manager/scripts",
    "./plugins/fastmcp-creator/skills/fastmcp-creator/scripts",
    "./plugins/gitlab-skill/skills/gitlab-skill/scripts",
    "./plugins/holistic-linting/skills/holistic-linting/scripts",
    "./plugins/plugin-creator/scripts",
    "./plugins/plugin-creator/skills/skill-creator/scripts",
    "./plugins/python3-development/scripts",
    "./plugins/python3-development/skills/implementation-manager/scripts",
    "./plugins/python3-development/skills/mkdocs/scripts",
    "./plugins/python3-development/skills/uv/scripts",
    "./plugins/summarizer/scripts",
]
testpaths = ["**/tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = ["tests/*", "*/tests/*", "**/test_*.py"]
source = ["**/scripts"]

[tool.ty.environment]
extra-paths = [
    "./.claude/skills/create-merge-request-changelog/scripts",
    "./.claude/skills/research-curator/scripts",
    "./plugins/agentskill-kaizen/mcp",
    "./plugins/development-harness/skills/implementation-manager/scripts",
    "./plugins/fastmcp-creator/skills/fastmcp-creator/scripts",
    "./plugins/gitlab-skill/skills/gitlab-skill/scripts",
    "./plugins/holistic-linting/skills/holistic-linting/scripts",
    "./plugins/plugin-creator/scripts",
    "./plugins/plugin-creator/skills/skill-creator/scripts",
    "./plugins/python3-development/scripts",
    "./plugins/python3-development/skills/implementation-manager/scripts",
    "./plugins/python3-development/skills/mkdocs/scripts",
    "./plugins/python3-development/skills/uv/scripts",
    "./plugins/summarizer/scripts",
]
root = ["./plugins"]

[[tool.ty.overrides]]
include = ["plugins/agentskill-kaizen/**"]

[tool.ty.overrides.rules]
call-non-callable = "warn" # prefixspan has incomplete type stubs

[[tool.ty.overrides]]
include = ["**/test_*.py", "**/conftest.py", "**/tests/**", "tests/**"]

[tool.ty.overrides.rules]
call-non-callable = "ignore"
invalid-argument-type = "warn"
invalid-assignment = "warn"
possibly-unresolved-reference = "warn"
too-many-positional-arguments = "warn"
unresolved-attribute = "ignore"

[tool.ty.rules]

[tool.ty.src]
include = ["**/*.py"]

[tool.ruff]
fix = true
src = [".github", ".gitlab", "plugins", "scripts", "tests", "typings"]
target-version = "py311"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "A",     # see: https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",   # see: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ASYNC", # see: https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",     # see: https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE",   # see: https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C4",    # see: https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90",   # see: https://docs.astral.sh/ruff/rules/#mccabe-c90
    "D",     # see: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DOC",   # see: https://docs.astral.sh/ruff/rules/#pydoclint-doc
    "E",     # see: https://docs.astral.sh/ruff/rules/#error-e
    "EXE",   # see: https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "F",     # see: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FA",    # see: https://docs.astral.sh/ruff/rules/#flake8-annotations-fa
    "FAST",  # see: https://docs.astral.sh/ruff/rules/#fastapi-fast
    "FLY",   # see: https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB",  # see: https://docs.astral.sh/ruff/rules/#refurb-furb
    "G201",  # see: https://docs.astral.sh/ruff/rules/logging-exc-info/
    "G202",  # see: https://docs.astral.sh/ruff/rules/logging-redundant-exc-info/
    "I",     # see: https://docs.astral.sh/ruff/rules/#isort-i
    "N",     # see: https://docs.astral.sh/ruff/rules/#flake8-quotes-n
    "PERF",  # see: https://docs.astral.sh/ruff/rules/#perflint-perf
    "PGH",   # see: https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE",   # see: https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PL",    # see: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "PT",    # see: https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # see: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PYI",   # see: https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "Q",     # see: https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET",   # see: https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE",   # see: https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF",   # see: https://docs.astral.sh/ruff/rules/#ruff-ruf
    "S",     # see: https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM",   # see: https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF",   # see: https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT",  # see: https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T10",   # see: https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T20",   # see: https://docs.astral.sh/ruff/rules/#flake8-typing-t20
    "TC",    # see: https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "TID",   # see: https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY",   # see: https://docs.astral.sh/ruff/rules/#tryceratops-try
    "UP",    # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",     # see: https://docs.astral.sh/ruff/rules/#warning-w
    "YTT",   # see: https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]
ignore = [
    "DOC501",  # Raised exception {id} missing from docstring
    "DOC502",  # Raised exception is not explicitly raised
    "E501",    # Line too long ({width} > {limit})
    "EXE003",  # Shebang should contain python, pytest, or uv run (doesn't handle global arguments)
    "PLR0913",
    "PLR0917",
    "PLR6301", #
    "S404",    # subprocess possibly insecure - still need to use subprocess though
    "S603",    # subprocess without shell=True
    "S606",    # os.exec* without shell - intentional for privilege elevation (safer than with shell)
    "T201",    # print() statements are intentional for CI output visibility
    "TRY003",  # Long error messages are fine
]
preview = true
unfixable = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
force-wrap-aliases = false
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Anti-pattern examples: intentionally incorrect code demonstrating what NOT to do
"**/assets/nested-typer-exceptions/*.py" = ["ANN", "DOC"]
# Lazy imports for optional dependency detection (hatchling may not be installed)
"**/assets/version.py" = ["PLC0415"]
"**/scripts/**" = [
    "ANN401",  # Any type annotations acceptable in script arguments
    "DOC",     # Docstring content requirements relaxed for scripts
    "PLC0415", # Local imports acceptable in scripts for lazy loading
    "PLR0911", # Too many return statements acceptable in script logic
    "S",       # Security checks relaxed for CLI scripts (subprocess, partial paths)
    "T201",    # print() statements are intentional for CI output visibility
]
"**/tests/**" = [
    "ANN",  # Type annotations optional for test fixtures/methods
    "D",    # Docstring requirements relaxed for tests
    "DOC",  # Docstring content requirements relaxed
    "E501", # Line length relaxed for test data
    "EXE",  # Shebang executable check skipped for PEP723 test files
    "N",    # camelCase in test names acceptable when testing API fields
    "PLC",  # Local imports acceptable in test helpers
    "PLR",  # Testing private methods is valid test pattern
    "S",    # Security checks not needed in tests
    "SLF",  # Private name imports acceptable for testing internals
    "T",    # print() statements are intentional for CI output visibility
]
"typings/**" = ["A", "ANN", "N"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests".msg = "Use httpx instead. httpx has built-in type annotations and is the project standard."

[tool.basedpyright]
extraPaths = ["**/plugins", "**/scripts", "**/tests"]
ignore = ["**/typings", "**/tests", "plugins/agentskill-kaizen"]
include = ["**/plugins", "**/scripts"]
pythonVersion = "3.11"
reportImplicitRelativeImport = false
reportMissingImports = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "basic"
