[project]
name = "claude_skills"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "backlog-core",
    "fastmcp[tasks]>=3.0.2",
    "marko>=2.2.2",
    "pygithub>=2.8.1",
    "skill-seekers>=3.0.0",
]

[dependency-groups]
dev = [
    "anthropic>=0.80.0",
    "basedpyright>=1.33.0",
    "cairosvg>=2.7.0",
    "claude-code-sdk>=0.0.25",
    "defusedxml>=0.7.1",
    "duckdb>=1.4.4",
    "fastmcp[tasks]>=3.1.1",
    "generate-changelog>=0.16.0",
    "gitpython>=3.1.45",
    "hatch-vcs>=0.5.0",
    "holoviews>=1.22.1",
    "httpx>=0.28.1",
    "hvplot>=0.12.2",
    "hypothesis>=6.0.0",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.0",
    "panel>=1.8.10",
    "pm4py>=2.7.0",
    "prefixspan>=0.5.2",
    "prek>=0.2.19",
    "pydantic>=2.12.3",
    "pygithub>=2.1.1",
    "pypfmt>=0.1.0",
    "pyright>=1.1.404",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-frontmatter>=1.1.0",
    "python-gitlab>=8.0.0",
    "rich>=14.2.0",
    "ruamel.yaml>=0.18.0",
    "ruff>=0.15.4",
    "scikit-learn>=1.0",
    "tiktoken>=0.12.0",
    "toml-sort>=0.24.3",
    "tomlkit>=0.13.0",
    "tornado>=6.5.5",
    "ty>=0.0.25",
    "typer>=0.21.0",
    "uv-sort>=0.7.0",
    "vadersentiment>=3.3.2",
    "zvec>=0.2.0",
]

[tool.uv.sources]
backlog-core = { workspace = true }

[tool.uv.workspace]
members = ["plugins/development-harness"]

[tool.pytest.ini_options]
addopts = [
    "--cov=scripts",
    "--cov=plugins",
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
    "-n",
    "auto",
    "--dist",
    "loadgroup",
]
asyncio_mode = "auto"
markers = [
    "demos: marks tests as demonstration tests",
    "e2e: marks tests as end-to-end tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
]
pythonpath = [
    ".",
    "./.claude/skills/create-merge-request-changelog/scripts",
    "./.claude/skills/gh/scripts",
    "./.claude/skills/research-curator/scripts",
    "./plugins/development-harness/scripts",
    "./plugins/development-harness/skills/implementation-manager/scripts",
    "./plugins/fastmcp-creator/skills/fastmcp-creator/scripts",
    "./plugins/gitlab-skill/skills/gitlab-skill/scripts",
    "./plugins/holistic-linting/skills/holistic-linting/scripts",
    "./plugins/plugin-creator/scripts",
    "./plugins/plugin-creator/skills/skill-creator/scripts",
    "./plugins/python3-development/scripts",
    "./plugins/python3-development/skills/mkdocs/scripts",
    "./plugins/python3-development/skills/uv/scripts",
    "./plugins/summarizer/scripts",
    "./plugins/frustration-analyzer/tests",
]
testpaths = [
    # Explicit list excludes plugins/scientific-method/mcp/experiment-registry/tests,
    # which is a standalone sub-project with its own pyproject.toml and pytest config.
    # That sub-project must be tested independently: cd into its directory and run pytest.
    # Including it here causes a conftest module name collision because uv adds the
    # experiment-registry package root to sys.path, making tests/conftest.py resolve
    # as "tests.conftest" — the same name as plugins/development-harness/tests/conftest.py.
    "plugins/agentskill-kaizen/tests",
    "plugins/development-harness/tests",
    "plugins/development-harness/tests_sam",
    "plugins/frustration-analyzer/tests",
    "plugins/plugin-creator/tests",
    "plugins/development-harness/skills/implementation-manager/tests",
    "plugins/summarizer/tests",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = ["tests/*", "*/tests/*", "**/test_*.py"]
source = ["**/scripts"]

[tool.ty.environment]
extra-paths = [
    "./plugins/development-harness",
    "./plugins/development-harness/skills/backlog",
    "./plugins/development-harness/skills/backlog/scripts",
    "./plugins/development-harness/skills/kage-bunshin/scripts",
    "./plugins/development-harness/tests",
    "./.claude/skills/create-merge-request-changelog/scripts",
    "./.claude/skills/gh/scripts",
    "./.claude/skills/research-curator/scripts",
    "./plugins/agentskill-kaizen/mcp",
    "./plugins/agentskill-kaizen/tests",
    "./plugins/frustration-analyzer/tests",
    "./plugins/plugin-creator/tests",
    "./plugins/python3-development/scripts",
    "./plugins/development-harness/scripts",
    "./plugins/development-harness/skills/implementation-manager/scripts",
    "./plugins/development-harness/skills/implementation-manager/tests/test_task_status_hook",
    "./plugins/fastmcp-creator/skills/fastmcp-creator/scripts",
    "./plugins/gitlab-skill/skills/gitlab-skill/scripts",
    "./plugins/holistic-linting/skills/holistic-linting/scripts",
    "./plugins/plugin-creator/scripts",
    "./plugins/plugin-creator/skills/skill-creator/scripts",
    "./plugins/python3-development/skills/mkdocs/scripts",
    "./plugins/python3-development/skills/uv/scripts",
    "./plugins/summarizer/scripts",
    "./.claude/skills/daily-releases/scripts/daily_releases_lib",
]
root = ["./"]

[[tool.ty.overrides]]
include = ["plugins/agentskill-kaizen/**"]

[tool.ty.overrides.rules]
call-non-callable = "warn"    # prefixspan has incomplete type stubs
unresolved-attribute = "warn" # lazy import pattern: `import mod; mod.Attr` — ty sees ModuleType, not resolved class

[[tool.ty.overrides]]
include = ["**/test_*.py", "**/conftest.py", "**/tests/**", "tests/**"]

[tool.ty.overrides.rules]
call-non-callable = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
possibly-unresolved-reference = "warn"
too-many-positional-arguments = "warn" # runtime-injected modules (e.g. backlog via sys.path in conftest)

[[tool.ty.overrides]]
# pytest.skip is decorated with @_with_exception which ty 0.0.17 miscounts as a bound
# method expecting 0 positional args (counting self). Both positional and keyword forms
# trigger false positives. Suppress for the three reader test files that use this pattern.
include = [
    "plugins/development-harness/tests_sam/test_readers/test_detect.py",
    "plugins/development-harness/tests_sam/test_readers/test_frontmatter_reader.py",
    "plugins/development-harness/tests_sam/test_readers/test_manifest_reader.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"         # ty 0.0.17 bug: same pytest.skip decorator issue
too-many-positional-arguments = "ignore" # ty 0.0.17 bug: @_with_exception decorator miscounts self

[tool.ty.rules]

[tool.ty.src]
# Exclude git symlinks (mode 120000) - on Windows without symlink support, these are
# regular files whose content is the target path; linters parse that as Python and fail.
# All 6 repo symlinks: 5 .md (accessing_online_resources), 1 dir (plugins/uv/skills/uv).
# Only the dir needs exclusion for Python linting.
exclude = [
    "plugins/uv/skills/uv",
    ".tmp",
]
include = ["**/*.py"]

[tool.ruff]
# Exclude git symlinks - Windows reads target path as file content; linters fail.
# See [tool.ty.src] exclude for full list. Add new symlinked .py paths here.
extend-exclude = [
    "plugins/uv/skills/uv",
    ".tmp",
]
fix = true
line-length = 120
src = ["**/scripts", ".github", ".gitlab", "plugins", "tests", "typings"]
target-version = "py311"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "A",     # see: https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",   # see: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ASYNC", # see: https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",     # see: https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE",   # see: https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C4",    # see: https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90",   # see: https://docs.astral.sh/ruff/rules/#mccabe-c90
    "D",     # see: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DOC",   # see: https://docs.astral.sh/ruff/rules/#pydoclint-doc
    "E",     # see: https://docs.astral.sh/ruff/rules/#error-e
    "EXE",   # see: https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "F",     # see: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FA",    # see: https://docs.astral.sh/ruff/rules/#flake8-annotations-fa
    "FAST",  # see: https://docs.astral.sh/ruff/rules/#fastapi-fast
    "FLY",   # see: https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB",  # see: https://docs.astral.sh/ruff/rules/#refurb-furb
    "G201",  # see: https://docs.astral.sh/ruff/rules/logging-exc-info/
    "G202",  # see: https://docs.astral.sh/ruff/rules/logging-redundant-exc-info/
    "I",     # see: https://docs.astral.sh/ruff/rules/#isort-i
    "PERF",  # see: https://docs.astral.sh/ruff/rules/#perflint-perf
    "PGH",   # see: https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE",   # see: https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PL",    # see: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "PT",    # see: https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",   # see: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PYI",   # see: https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "Q",     # see: https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET",   # see: https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE",   # see: https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF",   # see: https://docs.astral.sh/ruff/rules/#ruff-ruf
    "S",     # see: https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM",   # see: https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF",   # see: https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT",  # see: https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T10",   # see: https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T20",   # see: https://docs.astral.sh/ruff/rules/#flake8-typing-t20
    "TC",    # see: https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "TID",   # see: https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY",   # see: https://docs.astral.sh/ruff/rules/#tryceratops-try
    "UP",    # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",     # see: https://docs.astral.sh/ruff/rules/#warning-w
    "YTT",   # see: https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]
ignore = [
    "DOC501",  # Raised exception {id} missing from docstring
    "DOC502",  # Raised exception is not explicitly raised
    "E402",    # Module level import not at top of file
    "E501",    # Line too long ({width} > {limit})
    "EXE003",  # Shebang should contain python, pytest, or uv run (doesn't handle global arguments)
    "PLR0913",
    "PLR0917",
    "PLR6301", #
    "S404",    # subprocess possibly insecure - still need to use subprocess though
    "S603",    # subprocess without shell=True
    "S606",    # os.exec* without shell - intentional for privilege elevation (safer than with shell)
    "T201",    # print() statements are intentional for CI output visibility
    "TRY003",  # Long error messages are fine
]
preview = true
unfixable = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
force-wrap-aliases = false
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# Anti-pattern examples: intentionally incorrect code demonstrating what NOT to do
"**/assets/nested-typer-exceptions/*.py" = ["ANN", "DOC"]
# Lazy imports for optional dependency detection (hatchling may not be installed)
"**/assets/version.py" = ["PLC0415"]
# FastMCP lifespan hook requires async def + yield without await — RUF029 is a false positive
"**/backlog_core/server.py" = ["RUF029"]
# dh_paths and kage-bunshin spawn call system tools by name (not full path) — intentional
"**/dh_paths.py" = ["S607"]
"**/kage-bunshin/scripts/spawn.py" = ["S607"]
"**/skill-creator/**/*.py" = [
    "ANN",
    "ANN",
    "BLE001",
    "C901",
    "C901",
    "D",
    "D",
    "DOC",
    "DOC",
    "F401",
    "FURB",
    "PLR",
    "PLR",
    "PLW",
    "RUF",
    "S",
    "S",
    "T",
    "T",
    "TRY",
]
# Test files that live in scripts/ directories (not tests/)
"**/test_*.py" = [
    "ANN",  # Type annotations optional for test fixtures/methods
    "D",    # Docstring requirements relaxed for tests
    "DOC",  # Docstring content requirements relaxed
    "E501", # Line length relaxed for test data
    "EXE",  # Shebang executable check skipped for PEP723 test files
    "N",    # camelCase in test names acceptable when testing API fields
    "PLC",  # Local imports acceptable in test helpers
    "PLR",  # Testing private methods is valid test pattern
    "S",    # Security checks not needed in tests (S101 assert is expected)
    "SLF",  # Private name imports acceptable for testing internals
    "T",    # print() statements are intentional for CI output visibility
]
"**/tests*/**" = [
    "ANN",      # Type annotations optional for test fixtures/methods
    "ASYNC240", # Blocking pathlib I/O in async test methods is acceptable at test scale
    "D",        # Docstring requirements relaxed for tests
    "DOC",      # Docstring content requirements relaxed
    "E501",     # Line length relaxed for test data
    "EXE",      # Shebang executable check skipped for PEP723 test files
    "N",        # camelCase in test names acceptable when testing API fields
    "PLC",      # Local imports acceptable in test helpers
    "PLR",      # Testing private methods is valid test pattern
    "S",        # Security checks not needed in tests
    "SLF",      # Private name imports acceptable for testing internals
    "T",        # print() statements are intentional for CI output visibility
]
# Lazy import for optional duckdb dependency in _write_duckdb
"plugins/agentskill-kaizen/scripts/sentiment-score.py" = ["PLC0415"]
# Executable bit is set at runtime via uv run (PEP 723 shebang)
"plugins/development-harness/scripts/verify_migration_fidelity.py" = ["EXE001"]
# Hyphenated package directory name is required by MCP convention
"plugins/scientific-method/mcp/experiment-registry/__init__.py" = ["N999"]
# ruamel.yaml returns dynamically typed values; Any is the correct annotation here
"research/knowledge-explorer.py" = ["ANN401"]
"typings/**" = ["A", "ANN", "N"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests".msg = "Use httpx instead. httpx has built-in type annotations and is the project standard."

[tool.mypy]
# Project uses ty (basedpyright) for type checking. Exclude all to avoid mypy extension errors.
exclude = [".*"]

[tool.basedpyright]
# Disabled: project uses ty for type checking. Config kept so IDE uses project settings, not defaults.
typeCheckingMode = "off"
